Adds baseurl for github pages

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fable</title>
+    <base id="app-base" href="" />
   </head>
   <body>
     <h1>Fable HTML experiments</h1>
     <a class="app-route" href="/" route="/">Home</a>
     <a class="app-route" href="/about" route="/about">About</a>
+    <a class="app-route" href="/mdn-canvas-tutorial" route="/mdn-canvas-tutorial">MDN Canvas Tutorial</Canvas></a>
     <div id="app"></div>
     <script type="module" src="src/App.fs.js"></script>
   </body>
