add publish-gh-pages.sh and fix base href

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fable</title>
-    <base id="app-base" href="" />
+    <base id="app-base" href="./" />
   </head>
   <body>
     <h1>Fable HTML experiments</h1>
