--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Fable</title>
   </head>
   <body>
-    <h1>Fable HTML experiments</h1>
+    <h1>Fable Experiments</h1>
     <a class="app-route" href="/" route="/">Home</a>
     <a class="app-route" href="/about" route="/about">About</a>
     <a class="app-route" href="/mdn-canvas-tutorial" route="/mdn-canvas-tutorial">MDN Canvas Tutorial</Canvas></a>
