--- a/index.html
+++ b/index.html
@@ -30,12 +30,56 @@
       </script>
       <!-- End Single Page Apps for GitHub Pages -->
 
+      <link rel="stylesheet" href="https://unpkg.com/simpledotcss/simple.min.css">
+      <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/themes/light.css" />
+      <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script> -->
+      
+      <style>
+          :root {
+              --standard-border-radius: 0px;
+          }
+          html {
+            font-size: 14px;
+          }
+          
+          nav > .app-route {
+            border-top: 0px;
+            border-right: 0px;
+            border-left: 0px;
+            border-bottom:  1px solid var(--border);;
+          }
+          nav > .active {
+            border: 1px solid var(--border);
+          }
+          main {
+            animation: fadeInAnimation ease 2s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+          }
+
+          @keyframes fadeInAnimation {
+              0% {
+                  opacity: 0;
+              }
+
+              100% {
+                  opacity: 1;
+              }
+          }
+      </style>
   <body>
-    <h1>Fable Experiments</h1>
-    <a class="app-route" href="/" route="/">Home</a>
-    <a class="app-route" href="/about" route="/about">About</a>
-    <a class="app-route" href="/mdn-canvas-tutorial" route="/mdn-canvas-tutorial">MDN Canvas Tutorial</Canvas></a>
-    <div id="app"></div>
+      <header>
+          <h1>Fable Experiments</h1>
+          <span>David Bruce's Site for Experimenting with F# and Fable</span>
+          <nav> 
+              <a class="app-route" href="/" route="/">Home</a>
+              <a class="app-route" href="/about" route="/about">About</a>
+              <a class="app-route" href="/mdn-canvas-tutorial" route="/mdn-canvas-tutorial">MDN Canvas Tutorial</Canvas></a>
+          </nav>
+      </header>
+      <main>    
+          <div id="app"></div>
+        </main>
     <script type="module" src="src/App.fs.js"></script>
   </body>
 </html>
